# fashion-segmentation

./: pyproject.toml
